    usage of OLD dbus XML files.
46. If Cantata detects that an album, or artist, has new songs after updating
    MPD's DB, then the artist and album are drawn with bold text.
47. When searching for album covers, do not look for $songFile.png/jpg
48. Hide track change popup setting if running under Linux and
    org.freedesktop.Notifications DBus service is not registered.

1.3.4
-----
1. Fix adding songs to playqueue with priority when playqueue is not empty.
2. When loading covers, if load fails, check to see if this is because of an
   incorrect extension. e.g. load a .jpg file with PNG type, and vice versa.
3. Fix showing of time-slider when Cantata is started minimized to system tray
   and MPD is playing.

1.3.3
-----
 1. If Cantata is started whilst an instance is also running, raise window of
    current instance. (Linux-only fix)
 2. Add song to playqueue from albums page when double-clicked.
 3. Fix display of online service track album-artist in copy dialog.
 4. Ensure library is loaded the very first time Cantata is run (ie. after
    connected to MPD via initial settings wizard).
 5. When song is updated in context view, abort any current network jobs.
 6. Fix expand all / collapse all actions. Expand all will only expand 1 level
    for main browsers.
 7. When reading lines from user mpd.conf file, read as UTF-8.
 8. Reset devices and online services models when artist view cover size
    changes.
 9. If downloading online service track listing fails, stop loader and
    show error.
10. Use new location of Jamendo DB listing.

1.3.2
-----
 1. In cover/artist dialog, when attempting to save an image into Cantata's
    cache folder - ensure the 'covers' sub-folder is created.
 2. When saving artist image from cover dialog, if set to save in MPD folder and
    song's path does not have 2 folder elements then save in cache folder.
    Cantata will only save artist images, and backdrops, in MPD folder if the